logistic and decision tree

--- a/IMDB/IMDB_cleaned_TFIDF_DecisionTreeClassifier.ipynb
+++ b/IMDB/IMDB_cleaned_TFIDF_DecisionTreeClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,16 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to /home/aayush/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\DELL\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/aayush/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\DELL\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,26 +136,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "nb = MultinomialNB()"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "nb = DecisionTreeClassifier()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            splitter='best')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8627333333333334"
+       "0.7174666666666667"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,17 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6540, 1007],\n",
-       "       [1052, 6401]])"
+       "array([[5370, 2035],\n",
+       "       [2203, 5392]], dtype=int64)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,6 +219,13 @@
    "source": [
     "metrics.confusion_matrix(test_labels, y_pred_class)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
