--- a/IMDB/IMDB_cleaned_TFIDF_Logistic.ipynb
+++ b/IMDB/IMDB_cleaned_TFIDF_Logistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,16 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to /home/aayush/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\DELL\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/aayush/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\DELL\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,26 +136,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "nb = MultinomialNB()"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "nb = LogisticRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8627333333333334"
+       "0.8898666666666667"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,17 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6540, 1007],\n",
-       "       [1052, 6401]])"
+       "array([[6606,  918],\n",
+       "       [ 734, 6742]], dtype=int64)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
