--- a/SVM/IMDB_cleaned_TFIDF_SVM.ipynb
+++ b/SVM/IMDB_cleaned_TFIDF_SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +50,8 @@
     "    from nltk.stem.porter import PorterStemmer\n",
     "     \n",
     "    corpus =[] \n",
-    "    if no_reviews == 35000:\n",
-    "        start = 0\n",
-    "        end = 35000\n",
-    "    else:\n",
-    "        start = 35000\n",
-    "        end = 50000\n",
-    "    for i in range (start, end):\n",
-    "        review = re.sub('[^a-zA-Z]',' ', dataset[i]) #Removes all other characters besides the letters and puts the review in a string\n",
+    "    for i in range (0, no_reviews):\n",
+    "        review = re.sub('[^a-zA-Z]',' ', dataset['review'][i]) #Removes all other characters besides the letters and puts the review in a string\n",
     "        review = review.lower() \n",
     "        review = review.split()\n",
     "        ps = PorterStemmer() \n",
@@ -69,21 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = df.loc[0:34999]\n",
-    "test = df.loc[35000:]\n",
-    "train_data = train['review']\n",
-    "test_data = test['review']\n",
-    "train_labels = train['label']\n",
-    "test_labels = test['label']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,98 +71,133 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to /home/aayush/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/aayush/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
    "source": [
-    "train_data = clean_reviews(35000,train_data)\n",
-    "test_data = clean_reviews(50000,test_data)"
+    "x = clean_reviews(50000,df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_labels = train_labels.map({'pos': 1, 'neg': 0})\n",
-    "test_labels = test_labels.map({'pos': 1, 'neg': 0})"
+    "def tf_idf(corpus):\n",
+    "    from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "    vect = TfidfVectorizer(ngram_range=(1,3), binary=True)\n",
+    "    X = vect.fit_transform(corpus)\n",
+    "    return X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "vect = TfidfVectorizer()\n",
-    "train_data = vect.fit_transform(train_data)"
+    "x_data = tf_idf(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_data = vect.transform(test_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "nb = MultinomialNB()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+       "<50000x7869861 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 16493611 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nb.fit(train_data, train_labels)"
+    "x_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_class = nb.predict(test_data)"
+    "labels = df['label']\n",
+    "labels = labels.map({'pos': 1, 'neg': 0})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = x_data[0:34999,:]\n",
+    "test_data = x_data[35000:49999,:]\n",
+    "train_labels = labels[0:34999]\n",
+    "test_labels = labels[35000:49999]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import LinearSVC\n",
+    "svm = LinearSVC()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8627333333333334"
+       "LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+       "     verbose=0)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svm.fit(train_data, train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_class = svm.predict(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9015934395626375"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,17 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6540, 1007],\n",
-       "       [1052, 6401]])"
+       "array([[6626,  856],\n",
+       "       [ 620, 6897]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,13 +234,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "personal",
    "language": "python",
-   "name": "python3"
+   "name": "personal"
   },
   "language_info": {
    "codemirror_mode": {
@@ -237,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
