--- a/Random Forest/IMDB_cleaned_TFIDF_RF.ipynb
+++ b/Random Forest/IMDB_cleaned_TFIDF_RF.ipynb
@@ -50,14 +50,8 @@
     "    from nltk.stem.porter import PorterStemmer\n",
     "     \n",
     "    corpus =[] \n",
-    "    if no_reviews == 35000:\n",
-    "        start = 0\n",
-    "        end = 35000\n",
-    "    else:\n",
-    "        start = 35000\n",
-    "        end = 50000\n",
-    "    for i in range (start, end):\n",
-    "        review = re.sub('[^a-zA-Z]',' ', dataset[i]) #Removes all other characters besides the letters and puts the review in a string\n",
+    "    for i in range (0, no_reviews):\n",
+    "        review = re.sub('[^a-zA-Z]',' ', dataset['review'][i]) #Removes all other characters besides the letters and puts the review in a string\n",
     "        review = review.lower() \n",
     "        review = review.split()\n",
     "        ps = PorterStemmer() \n",
@@ -71,56 +65,31 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = df.loc[0:34999]\n",
-    "test = df.loc[35000:]\n",
-    "train_data = train['review']\n",
-    "test_data = test['review']\n",
-    "train_labels = train['label']\n",
-    "test_labels = test['label']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to /home/aayush/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/aayush/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
    "source": [
-    "train_data = clean_reviews(35000,train_data)\n",
-    "test_data = clean_reviews(50000,test_data)"
+    "x = clean_reviews(50000,df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_labels = train_labels.map({'pos': 1, 'neg': 0})\n",
-    "test_labels = test_labels.map({'pos': 1, 'neg': 0})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "vect = TfidfVectorizer(ngram_range=(1,3), binary=True)\n",
-    "train_data = vect.fit_transform(train_data)"
+    "def tf_idf(corpus):\n",
+    "    from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "    vect = TfidfVectorizer(ngram_range=(1,3), binary=True)\n",
+    "    X = vect.fit_transform(corpus)\n",
+    "    return X"
    ]
   },
   {
@@ -129,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = vect.transform(test_data)"
+    "x_data = tf_idf(x)"
    ]
   },
   {
@@ -138,8 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "nb = DecisionTreeClassifier()"
+    "x_data"
    ]
   },
   {
@@ -148,7 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb.fit(train_data, train_labels)"
+    "labels = df['label']\n",
+    "labels = labels.map({'pos': 1, 'neg': 0})"
    ]
   },
   {
@@ -157,7 +126,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_class = nb.predict(test_data)"
+    "train_data = x_data[0:34999,:]\n",
+    "test_data = x_data[35000:49999,:]\n",
+    "train_labels = labels[0:34999]\n",
+    "test_labels = labels[35000:49999]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "clf = RandomForestClassifier(n_estimators = 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf.fit(train_data, train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_class = clf.predict(test_data)"
    ]
   },
   {
@@ -178,13 +178,6 @@
    "source": [
     "metrics.confusion_matrix(test_labels, y_pred_class)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
